--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         
+        <div id="divEditor"></div>
 
         <script src="./js/controlador.js" type="module"></script>
     </body>
