--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         
-        <div id="divEditor"></div>
+        <div id="divEditor">
+            
+        </div>
 
         <script src="./js/controlador.js" type="module"></script>
     </body>
