--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./css/estilo.css">
         <title>Formulario</title>
     </head>
     <body>
         
         <div id="divEditor"></div>
+
+        <div id="container">
+            <!-- Este es el div que contendrá los campos de pregunta y el botón de borrar -->
+            <div class="pregunta-container">
+                <!-- Aquí van los campos de pregunta -->
+                <!-- Aquí va el botón de borrar -->
+            </div>
+        </div>
 
         <script src="./js/controlador.js" type="module"></script>
     </body>
